# pkgs-web

./: .gitignore  .gitmodules  README.md  package-lock.json  package-template.html  package.json  pyproject.toml
src/: __init__.py
src/classes/: WebGenerator.py  WebPackage.py  WebRepository.py
src/pkgs-web/classes/: WebGenerator.py  WebRepository.py
src/pkgs-web/template-html/: front-page.html
src/pkgs_web/: __init__.py
src/pkgs_web/classes/: WebGenerator.py  WebPackage.py  WebRepository.py
src/template-html/: front-page.html  package-template.html
src/template-html/css/: styles.css
template-html/: front-page.html  package-template.html
typings/neptune/classes/: Package.pyi
