[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
dependencies=["requests", "PyYAML", "Jinja2", "packaging"]
name = "pkgs_web"
version = "0.0.1"
authors = [
  { name="Rahul Chandra", email="rahul@tucanalinux.org" },
]
description = "Dynamic generator to display Neptune repository information in html"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tucana-Linux/pkgs-web"
Issues = "https://github.com/Tucana-Linux/pkgs-web/issues"
